# trans_shortcut

./: README.md  pyproject.toml
AI_dubbing/: .gitignore  app_editor.py  chunking.py  main.py  translating.py
