[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["wijez <viet.info.43@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.137.1"
streamlit = "^1.58.0"
uvicorn = "^0.49.0"
whisper-timestamped = "^1.15.9"
pydub = "^0.25.1"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
